syntax = "proto3";
package beegfs;
option go_package = "github.com/thinkparq/protobuf/go/beegfs";

message Nic {
  enum Type {
    ETHERNET = 0;
    SDP = 1;
    RDMA = 3;
  }

  string addr = 1;
  string name = 2;
  Type type = 3;
}

message GetNodeListReq {
  // Query the nic list for each node and include it in the response
  bool include_nics = 1;
}
message GetNodeListResp {
  message Node {
    enum Type {
      CLIENT = 0;
      META = 1;
      STORAGE = 2;
      MANAGEMENT = 3;
    }

    int64 uid = 1;
    uint32 node_id = 2;
    Type type = 3;
    string alias = 4;
    uint32 beemsg_port = 5;
    // The nic list of this node. Meant to be populated only if include_nics =
    // true is set in the request
    repeated Nic nics = 6;
  }

  repeated Node nodes = 1;
  int64 meta_root_node_uid = 2;
}

service Management {
  rpc GetNodeList(GetNodeListReq) returns (GetNodeListResp);
}
